Added settings tab to profile nav

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -21,9 +21,14 @@
 // !Toggle comments
 
 #toggle_comments
-  padding: 10px 15px
+  padding: 3px 10px
   cursor: pointer
-  display: none
+  position: absolute
+  right: 45%
+  top: 135px
+  background-color: #aaa
+  border-radius: 4px
+  color: #fff
 
 #toggle_comments:after
   content: 'hide comments'
