--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -98,10 +98,11 @@
   .profile-tabs-notes,
   .profile-tabs-bookmarks,
   .profile-tabs-highlights,
-  .profile-tabs-badges
+  .profile-tabs-badges,
+  .profile-tabs-settings
     display: block
-    width: 109px
-    padding-left: 40px
+    width: 90px
+    padding-left: 38px
     margin-left: 2px
     float: left
     background: #EEEDEB image-url("profile-sprite.png") no-repeat 15px top
@@ -114,14 +115,15 @@
   .profile-tabs-notes a,
   .profile-tabs-bookmarks a,
   .profile-tabs-badges a,
-  .profile-tabs-highlights a
+  .profile-tabs-highlights a,
+  .profile-tabs-settings a
     height: 42px
     line-height: 41px
     display: block
     color: #444
     text-decoration: none
     font-weight: bold
-    font-size: 15px
+    font-size: 13px
 
   .profile-tabs
     .highlight
@@ -149,6 +151,9 @@
 
   .profile-tabs-badges
     background-position: 15px -307px
+
+  .profile-tabs-settings
+    background-position: 15px -371px
 
 
 // !Content area with feed etc.
