fix reading plan (no current plans) display & mobile main nav fix

--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -281,6 +281,9 @@ article#plan-index dd.highlighted a,
 
 // ----------------- Reading plans
 
+article .none
+  padding-top: 44px 
+  
 #subscriptions-index,
 #main article#plan-index
 
