--- a/app/views/campaigns/kids/_share.html.haml
+++ b/app/views/campaigns/kids/_share.html.haml
@@ -2,11 +2,11 @@
 
 .share
   %p.share-copy
-    Tell your friends about The Bible App for Kids...coming on Thursday!
+    Tell your friends about the Bible App for Kids.
 
   - fb_app_id   = Cfg.facebook_app_id
   - fb_name     = "The Bible App for Kids"
-  - fb_desc     = "It’s almost here! The Bible App for Kids is launching on November 28, Thanksgiving Day. Interactive Bible stories in a free app for iOS and Android. See a preview at bible.com/kids"
+  - fb_desc     = "The Bible App for Kids is here! Download the free app for iOS and Android today: interactive Bible stories to help your child learn, play, and grow in God’s Word. www.bible.com/kids"
   - fb_link     = "http://www.bible.com/kids"
   - fb_redirect = "http://www.bible.com/kids"
 
@@ -14,12 +14,12 @@
     Facebook
 
 
-  - twitter     = "The Bible App for Kids from @YouVersion is launching on Thanksgiving Day! See a preview: bible.com/kids"
+  - twitter     = "The Bible App for Kids from @YouVersion is here! It’s fun & completely free. Download: bible.com/kids #kidsbible"
   %a.share-tw{target:"_blank", href: "https://twitter.com/intent/tweet?text=#{twitter}#"}
     Twitter
 
 
   - subject     = "Meet the Bible App for Kids from YouVersion"
-  - body        = "The Bible App for Kids will launch on November 28, Thanksgiving Day!  I’m excited for kids to have their very own Bible App so they can learn, play, and grow in God’s Word. They’ll be able to explore a growing collection of Bible stories with touch-activated animations and learning activities. And it’s free, so our whole family can install it on our iOS or Android devices. Set an alarm on your phone to download the app on Thanksgiving morning."
+  - body        = "Great news - the Bible App for Kids is here! It’s completely free and it’s available now for iPhone, iPad, iPod touch, and Android devices. The app is a growing collection of Bible stories with touch-activated animations and learning activities, perfect for helping kids learn the big stories of the Bible. Go to bible.com/kids on your mobile device to download it today."
   %a.share-em{href: "mailto:?subject=#{subject}&body=#{body}"}
     Email
