--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -38,6 +38,7 @@
 
       -# !Logo and intro copy
 
+      %img.intro-icon{ src: "/assets/campaigns/kids/app-icon.png", alt: "App icon for The Bible App for Kids"}
       %h1.intro-bible
         The Bible App
       .intro-forkids
@@ -54,13 +55,7 @@
       %img.intro-img{ src: "/assets/campaigns/kids/hdr-jesus.png", alt: "Jesus and friends"}
 
       %p.intro-coming
-        Coming on Thursday!
-
-
-      %img.intro-icon{ src: "/assets/campaigns/kids/app-icon.png", alt: "App icon for The Bible App for Kids"}
-
-      /Content goes here
-      = yield
+        Now available!
 
 
 
@@ -68,12 +63,12 @@
       .hero
         = image_tag "campaigns/kids/hero.jpg", class: "hero-screen", alt: "Jesus heals the paralytic"
         .youtube-embed
-          %iframe{width:"805", height:"607", src: "//www.youtube.com/embed/oGC05HfOo4s", frameborder: "0", allowfullscreen: "true"}
+          %iframe{width:"805", height:"607", src: "//www.youtube.com/embed/nNLIv9LRc24?rel=0", frameborder: "0", allowfullscreen: "true"}
         %p.hero-copy
           Interact with the Bible and see it come to life.
 
       .youtube-mobile
-        %iframe{width:"100%", height:"auto", src: "//www.youtube.com/embed/oGC05HfOo4s", frameborder: "0", allowfullscreen: "true"}
+        %iframe{width:"100%", height:"auto", src: "//www.youtube.com/embed/nNLIv9LRc24?rel=0", frameborder: "0", allowfullscreen: "true"}
 
       -# !Smaller screenshots
 
@@ -96,6 +91,18 @@
           Games and activities help kids remember what they learn
         %p.features-5
           Kid-friendly navigation
+
+      -# !App store buttons
+      .download
+        %a.download-ios{href: "#"}
+          Available on the App store
+        %a.download-play{href: "#"}
+          Get it on Google Play
+        %a.download-amazon{href: "#"}
+          Available at Amazon Appstore for Android
+
+
+      -# !Share chunk
 
       = render "campaigns/kids/share"
 
