Hookup api to friends list, turn list into list, show friend request link and utilize request page, show top section only for approved user.

--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -512,7 +512,7 @@ button.action_button_grey,
 input[type="submit"].action_button_grey:hover,
 input[type="submit"].action_button_grey:focus,
 input[type="submit"].action_button_grey:active
-  background-color: #e6e6e6
+  background-color: #cfcfcf
 
 input[type="submit"].action_button_grey:focus,
 input[type="submit"].action_button_grey:active,
