--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -242,75 +242,21 @@
   margin: 4px 0 0
 
 .friends-count-find
+  width: 150px
   position: absolute
-  right: 0
+  right: 0px
   top: 2px
 
-.friend-requests
-  margin: 20px 0 0
-  overflow: hidden
-
-.friend-requests-title
-  margin: 0
-
-.friend-requests-info
-  position: relative
-  border-bottom: 1px dotted #e1e1e1
-  width: 49%
-  float: left
-  height: 90px
-  margin: 0 1% 0 0
-
-.friend-requests-info:nth-of-type(even)
-  margin: 0 0 0 1%
-
-.friend-requestor-avatar
-  width: 70px
-  height: 70px
-  +border-radius(70px)
-  +box-shadow(rgba(0, 0, 0, 0.15) 0 1px 1px)
+.friends-view-requests
+  width: 150px
   position: absolute
-  left: 0
-  top: 10px
-
-.friend-requestor-name
-  margin: 20px 0 -5px 85px
-  display: block
-
-.friend-requestor-wants
-  display: block
-  margin: 0 0 0 85px
-
-  span
-    color: #444
-    font-weight: normal
-
-.friend-requestor-accept,
-.friend-requestor-deny
-  position: absolute
-  height: 36px
-  width: 36px
-  +border-radius(36px)
-  overflow: hidden
-  text-indent: 100%
-  white-space: nowrap
-  top: 27px
-
-.friend-requestor-accept
-  right: 44px
-  background: #00B400 image-url("friend-request-sprite.png") no-repeat center 4px
-
-.friend-requestor-deny
-  right: 0
-  background: #D30000 image-url("friend-request-sprite.png") no-repeat center -128px
+  right: 0px
+  bottom: 25px
 
 .friend-directory
-  margin: 30px 0 0
   overflow: hidden
   clear: both
 
-.friend-directory-title
-  margin: 0
 
 .friend-details
   position: relative
