--- a/app/views/campaigns/kids/_share.html.haml
+++ b/app/views/campaigns/kids/_share.html.haml
@@ -14,12 +14,12 @@
     Facebook
 
 
-  - twitter     = "The Bible App for Kids from @YouVersion is here! It’s fun & completely free. Download: bible.com/kids #kidsbible"
+  - twitter     = "The Bible App for Kids from @YouVersion is here! It’s fun and completely free. Download: bible.com/kids #kidsbible"
   %a.share-tw{target:"_blank", href: "https://twitter.com/intent/tweet?text=#{twitter}#"}
     Twitter
 
 
-  - subject     = "Meet the Bible App for Kids from YouVersion"
+  - subject     = "The Bible App for Kids is here!"
   - body        = "Great news - the Bible App for Kids is here! It’s completely free and it’s available now for iPhone, iPad, iPod touch, and Android devices. The app is a growing collection of Bible stories with touch-activated animations and learning activities, perfect for helping kids learn the big stories of the Bible. Go to bible.com/kids on your mobile device to download it today."
   %a.share-em{href: "mailto:?subject=#{subject}&body=#{body}"}
     Email
