--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -63,12 +63,12 @@
       .hero
         = image_tag "campaigns/kids/hero.jpg", class: "hero-screen", alt: "Jesus heals the paralytic"
         .youtube-embed
-          %iframe{width:"805", height:"607", src: "//www.youtube.com/embed/nNLIv9LRc24?rel=0", frameborder: "0", allowfullscreen: "true"}
+          %iframe{width:"805", height:"607", src: "//www.youtube.com/embed/97YQAoCjpcs?rel=0", frameborder: "0", allowfullscreen: "true"}
         %p.hero-copy
           Interact with the Bible and see it come to life.
 
       .youtube-mobile
-        %iframe{width:"100%", height:"auto", src: "//www.youtube.com/embed/nNLIv9LRc24?rel=0", frameborder: "0", allowfullscreen: "true"}
+        %iframe{width:"100%", height:"auto", src: "//www.youtube.com/embed/97YQAoCjpcs?rel=0", frameborder: "0", allowfullscreen: "true"}
 
       -# !Smaller screenshots
 
