Duplicate app store buttons

--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -57,7 +57,14 @@
       %p.intro-coming
         Now available!
 
-
+      -# !App store buttons
+      .download
+        %a.download-ios{href: "#"}
+          Available on the App store
+        %a.download-play{href: "#"}
+          Get it on Google Play
+        %a.download-amazon{href: "#"}
+          Available at Amazon Appstore for Android
 
       -# !iPad hero screenshot
       .hero
