--- a/app/views/layouts/users.html.haml
+++ b/app/views/layouts/users.html.haml
@@ -33,7 +33,7 @@
         %p.profile-hdr-info-about
           = @user.bio
 
-      #toggle_comments
+      - #toggle_comments
 
     - # find the highlight method in /app/helpers/users_helper.rb
     %ul.profile-tabs
