--- a/app/views/moments/_highlight.html.haml
+++ b/app/views/moments/_highlight.html.haml
@@ -21,4 +21,4 @@
   -# !share controls, dates, and comments
   .moment-btm
     = render partial: "moments/actions_bar", locals: {moment: moment}
-    = render partial: "moments/comments", locals: {moment: moment}
+    = render partial: "moments/comments", locals: {moment: moment, comments_displayed: comments_displayed}
