--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,4 +2,4 @@
   = @me ? t('users.my profile') : t('users.other user profile', username: @user.name || @user.username)
 
 .social-feed
-  = render partial: "moments/cards", locals: {moments: @moments}
+  = render partial: "moments/cards", locals: {moments: @moments, comments_displayed: false}
