--- a/app/views/moments/_cards.html.haml
+++ b/app/views/moments/_cards.html.haml
@@ -1,3 +1,3 @@
 - unless moments.blank?
   - moments.each do |moment|
-    = render partial: moment.moment_partial_path, locals: {moment: moment}
+    = render partial: moment.moment_partial_path, locals: {moment: moment, comments_displayed: comments_displayed}
