removed user nav menu from users layout, created a new partial for this menu and add to user pages

--- a/app/views/users/password.html.haml
+++ b/app/views/users/password.html.haml
@@ -5,6 +5,8 @@
 
 
 %article
+  = render partial: "users/mobile_menu"
+
   = form_for :user, url: update_password_user_path(current_user), method: :put do |f|
     = render partial: "shared/form_errors", locals: {errors: @user.errors, heading: t("users.edit password errors")}
     %p
