--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -4,6 +4,7 @@
   = render partial: "widgets/settings"
 
 %article
+  = render partial: "users/mobile_menu"
 
   = form_for @user do |f|
     - unless @user.errors.blank?
