--- a/app/views/users/notifications.html.haml
+++ b/app/views/users/notifications.html.haml
@@ -2,6 +2,7 @@
 
 - # because page can be accessed while logged in or logged out (with token) we use
 - # current_user or fallback to params[:id]
+= render partial: "users/mobile_menu"
 
 = form_for @settings, url: update_notifications_user_path( current_user || params[:id] ,token: params[:token]), method: :put do |n|
   - unless @settings.errors.blank?
