--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -2,226 +2,274 @@
 //----------------------------------------------------------------------------------------------------
 
 .top_section
-  // @extend .clearfix
-  +background-image(linear-gradient(#fff, #ececec 1px, #e9e9e9))
-  background-color: #e9e9e9
-  border: none
-  font-size: 13px
-  padding: 0px
 
-  .profile_header
-    padding: 0
-    overflow: hidden
+  .profile-hdr
+    padding: 0 5%
     height: auto
 
-    img
-      position: relative
-      float: left
-      margin: 20px 20px 5px
-      top: 0
-      left: 0
-
-    h1
-      margin: 20px 0 10px
-      font-size: 33px
-      width: 59%
-      float: left
-
     .avatar_huge
-      border: 0
+      display: block
+      margin: 15px auto 0
+      position: relative
+      top: auto
+      right: auto
+      height: 64px
+      width: 64px
 
-  .highlighted span
-    border-top: 1px solid #cbc9cf
-    margin-top: -1px
+    .profile-hdr-btn
+      left: 15px
+      top: 0
 
-  ul, li
-    margin-top: 0
+    .profile-hdr-name
+      margin: 20px 0 10px
+      font-size: 42px
+      text-align: center
+
+    .profile-hdr-info
+      overflow: visible
+      display: block
+      margin-bottom: 10px
+
+    .profile-hdr-info-user,
+    .profile-hdr-info-location,
+    .profile-hdr-info-link
+      display: block
+      width: auto
+      padding: 0 20px 0 22px
+      background-color: #fff
+      +border-radius(4px)
+      padding: 3px 15px 3px 30px
+      background-position: 7px center
+      margin: 0 0 2px
+
+    #toggle_comments
+      position: relative
+      top: auto
+      right: auto
+
+article.profile
+  .mobile
+    display: none
+
+// !Tab navigation
+
+.top_section
+
+  .profile-tabs
+    margin: 20px 0 0
+
+  .profile-tabs-activity,
+  .profile-tabs-friends,
+  .profile-tabs-notes,
+  .profile-tabs-bookmarks,
+  .profile-tabs-highlights,
+  .profile-tabs-badges,
+  .profile-tabs-settings
+    display: block
+    width: 13.5%
+    padding-left: 0
+    margin-left: 1%
+    float: left
+    background: #EEEDEB image-url("profile-sprite.png") no-repeat center center
+    overflow: hidden
+    text-indent: 100%
+    white-space: nowrap
+
+  .profile-tabs-activity
     margin-left: 0
 
-  li
-    background:
-      repeat: no-repeat
-      position: left center
-    line-height: 2
-    padding-left: 26px
-    list-style: none
-
-  .profile_info
-    padding: 15px 20px
-    overflow: visible
-    clear: both
-
-    ul.float_left
-      float: none !important
-
-    .icon_small_about
-      background-position: 0 5px
-
-    div
-      position: relative
-      top: 0
-      left: 0
-
-    .action_button_green,
-    .action_button_red
-      display: block
-
-    .action_button_red
-      text-shadow: none
-      padding: 10px 20px
-
-.header_tabs,
-.top_section .header_tabs
-  +box-shadow(none)
-  padding-left: 0
-  background-color: #E9E9E9
-  overflow: hidden
-  border-top: 0
-
-  li
-    width: 17%
-    list-style: none
-    padding: 0
-    margin: 0
-    text-align: center
-    font-size: 12px
-    border-top: 1px solid #ccc
-    background-color: #E9E9E9
-
-  li:first-child
-    width: 15%
-
-  a,
-  span
-    height: 44px
-    width: auto
+  .profile-tabs-activity a,
+  .profile-tabs-friends a,
+  .profile-tabs-notes a,
+  .profile-tabs-bookmarks a,
+  .profile-tabs-badges a,
+  .profile-tabs-highlights a,
+  .profile-tabs-settings a
+    height: 42px
+    line-height: 41px
     display: block
-    text-indent: 100%
-    overflow: hidden
-    white-space: nowrap
-    padding: 0
-    margin: 0
-    background: none
+    color: #444
+    text-decoration: none
+    font-weight: bold
+    font-size: 13px
 
-  .highlighted
-    li:first-child
-      background: none
-    a
-      background: #fff
-    span
-      background: none
+  .profile-tabs-activity
+    background-position: center 12px
+    width: 13%
 
-  .activity span
-    background: image-url("mobile/profile_tabs_sprite.png") no-repeat center 10px
+  .profile-tabs-friends
+    background-position: center -52px
 
-  .notes span
-    background: image-url("mobile/profile_tabs_sprite.png") no-repeat center -98px
+  .profile-tabs-notes
+    background-position: center -116px
 
-  .bookmarks span
-    background: image-url("mobile/profile_tabs_sprite.png") no-repeat center -152px
+  .profile-tabs-bookmarks
+    background-position: center -179px
 
-  .badges span
-    background: image-url("mobile/profile_tabs_sprite.png") no-repeat center -259px
+  .profile-tabs-highlights
+    background-position: center -243px
 
-  .badges,
-  .activity,
-  .notes,
-  .bookmarks
-    background-repeat: no-repeat
-    background-size: auto
+  .profile-tabs-badges
+    background-position: center -307px
 
-.icon_small_user
-  background:
-    image: image-url("icon_small_user.png")
+  .profile-tabs-settings
+    background-position: center -371px
 
-.icon_small_location
-  background:
-    image: image-url("icon_small_location.png")
+  .profile-tabs
+    .highlight
+      background-color: #fff
+      border-top: 3px solid #222
 
-.icon_small_link
-  background:
-    image: image-url("icon_small_link.png")
+      a
+        height: 39px
+        line-height: 37px
 
-.icon_small_about
-  background:
-    image: image-url("icon_small_about.png")
+  .profile-tabs-activity.highlight
+    background-position: 15px 10px
+    width: 13%
 
-// `Profile - stuff below the avatar, bio, etc
+  .profile-tabs-friends.highlight
+    background-position: 15px -55px
+
+  .profile-tabs-notes.highlight
+    background-position: 15px -119px
+
+  .profile-tabs-bookmarks.highlight
+    background-position: 15px -182px
+
+  .profile-tabs-highlights.highlight
+    background-position: 15px -246px
+
+  .profile-tabs-badges.highlight
+    background-position: 15px -310px
+
+  .profile-tabs-settings.highlight
+    background-position: 15px -374px
+
+
+
+// !Profile - stuff below the avatar, bio, etc
 //----------------------------------------------------------------------------------------------------
 
 #main article.profile
   background: none
 
-  h1
-    margin-left: 20px
-
-  form
-    padding: 20px
-
-  form select
-    min-width: 250px !important
-    max-width: 250px !important
-
-.tabs
-  margin: 0 auto 10px !important
-  padding: 0px 25px !important
-  overflow: hidden
-  width: 80%
-
-.tabs dd a, .tabs dd a:hover
-  border-radius: 0px
-  padding: 8px 15px
-  font-size: 15px
-  background: none
-  background-color: #eee
-
-.tabs dd.highlighted a
-  +box-shadow(inset #fff 0 1px 0 0, inset rgba(#000, 0.05) 0 -2px 0 0)
-  background-color: #fff
-
-  #connection_info
-    padding-top: 20px
-    border-top: 1px solid #e1e1e1
-
-#main article.profile
-  .friends_list
-    margin-top: 0 !important
-    margin-bottom: 0
-
-  .combo_button
-    font-size: 15px
-    margin: -5px auto
-    width: 90%
-    position: relative
-    left: 0
-    top: 0
-    height: 43px
-    line-height: 39px
-
-    dd
-      background-color: #dedede
-      border:
-        top: 2px solid #eee
-        bottom: 2px solid #ccc
-      a
-        color: #444 !important
-
-    .highlighted
-      background-color: #666
-      border:
-        top: 3px solid #444
-        bottom: 1px solid #555
-      a
-        color: #fff !important
-
-    .highlighted:hover
-      background: #666
-
   .pagination
     margin-bottom: 5px
     padding: 15px 0 0 20px
 
-// Notifications
+
+// !Friends tab
+
+#main article.profile
+
+  .profile-friends
+    margin: 0
+    padding: 15px 5% 20px
+
+  .friends-count-have
+    font: 200 31px "Helvetica Neue", Arial, sans-serif
+    margin-bottom: 0
+
+  .friends-count-help
+    font-size: 12px
+
+  .friends-count-find
+    position: relative
+    right: auto
+    top: auto
+    margin: 10px 0 0
+
+  .friend-requests-info
+    position: relative
+    width: auto
+    float: none
+    margin: 0
+
+  .friend-requests-info:nth-of-type(even)
+    margin: 0
+
+  .friend-requestor-avatar
+    width: 70px
+    height: 70px
+    +border-radius(70px)
+    +box-shadow(rgba(0, 0, 0, 0.15) 0 1px 1px)
+    position: absolute
+    left: 0
+    top: 10px
+
+  .friend-requestor-name
+    margin: 0 0 -5px 85px
+    padding: 20px 0 0
+
+  .friend-requestor-wants
+    display: block
+    margin: 0 0 0 85px
+
+    span
+      color: #444
+      font-weight: normal
+
+  .friend-requestor-accept,
+  .friend-requestor-deny
+    top: auto
+
+  .friend-requestor-accept
+    right: 0
+    top: 10px
+    background: #00B400 image-url("friend-request-sprite.png") no-repeat center 3px
+
+  .friend-requestor-deny
+    top: 46px
+    right: 0
+    background: #D30000 image-url("friend-request-sprite.png") no-repeat center -129px
+
+  .friend-directory
+    margin: 30px 0 0
+    overflow: hidden
+    clear: both
+
+  .friend-directory-title
+    margin: 0
+
+  .friend-details
+    position: relative
+    border-bottom: 1px dotted #e1e1e1
+    width: auto
+    float: none
+    height: 90px
+    margin: 0
+
+  .friend-details:nth-of-type(even)
+    margin: 0
+
+  .friend-details-avatar
+    width: 70px
+    height: 70px
+    +border-radius(70px)
+    +box-shadow(rgba(0, 0, 0, 0.15) 0 1px 1px)
+    position: absolute
+    left: 0
+    top: 10px
+
+  .friend-details-name
+    margin: 0 0 -5px 85px
+    padding: 33px 0 0
+
+  .friend-details-delete
+    position: absolute
+    height: 36px
+    width: 36px
+    +border-radius(36px)
+    overflow: hidden
+    text-indent: 100%
+    white-space: nowrap
+    top: 27px
+    right: 0
+    background: #D30000 image-url("friend-request-sprite.png") no-repeat center -128px
+
+
+// !Notifications
 //----------------------------------------------------------------------------------------------------
 
 .notifications
