Bookmark labels for your bookmarks page.

--- a/app/assets/stylesheets/_bookmarks.sass
+++ b/app/assets/stylesheets/_bookmarks.sass
@@ -23,6 +23,32 @@
     text-transform: capitalize
     color: #999
 
+.bookmarks-labels-wrap
+  padding: 6px
+  margin-bottom: 15px
+  clear: both
+  background: #fff
+  +round
+  font-size: 12px
+  line-height: 24px
+
+  .labels-heading
+    font-size: inherit
+    line-height: inherit
+    float: left
+    margin: 0 10px 0 4px
+
+.bookmarks-labels
+  overflow: auto
+  margin: 0
+  
+  .label
+    margin-left: 1em
+    float: left
+
+    .moment-bm-labels-link
+      background-color: #ccc
+
 
 
 // Mobile bookmark styles
