Proper locals for highlights / notes templates.

--- a/app/views/users/highlights.html.haml
+++ b/app/views/users/highlights.html.haml
@@ -2,4 +2,4 @@
 
 
 .social-feed
-  = render partial: "moments/cards", locals: {moments: @highlights}
+  = render partial: "moments/cards", locals: {moments: @highlights, comments_displayed: false}
