--- a/app/views/users/notes.html.haml
+++ b/app/views/users/notes.html.haml
@@ -1,5 +1,4 @@
 - @sidebar = false
 
-
 .social-feed
-  = render partial: "moments/cards", locals: {moments: @notes}
+  = render partial: "moments/cards", locals: {moments: @notes,comments_displayed: false}
