--- a/app/views/layouts/users.html.haml
+++ b/app/views/layouts/users.html.haml
@@ -39,7 +39,7 @@
     %ul.profile-tabs
       %li.profile-tabs-activity{class: highlight(user_path)}
         %a{href: user_path(@user)}
-          %span Profile
+          %span Activity
       %li.profile-tabs-friends{class: highlight(friends_user_path)}
         %a{href: friends_user_path(@user)}
           %span Friends
